<resources>
    <string name="app_name">WordBook</string>
    <string name="wordBook">단어장</string>
    <string name="edit">수정</string>
    <string name="add">추가</string>
    <string name="save_success">저장이 완료되었습니다.</string>
    <string name="is_update">isUpdated</string>
    <string name="please_input_word">단어를 입력해주세요</string>
    <string name="please_input_mean">뜻을 입력해주세요</string>
    <string name="please_check_type">품사를 체크해주세요</string>
    <string name="delete_success">삭제가 완료되었습니다.</string>
    <string name="error">에러가 발생하였습니다.</string>
    <string name="value">뜻: %s</string>
    <string name="type">품사: %s</string>
    <string name="type_init">품사</string>
    <string name="noun">명사</string>
    <string name="add_word">단어추가</string>
    <string name="word">단어</string>
    <string name="mean">뜻</string>
    <string name="input_second_up">2자 이상을 입력해주세요</string>
    <string name="typeSort">품사 종류</string>
    <string name="type_pick">품사를 고르세요</string>
</resources>